--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,6 @@
       <artifactId>spring-boot-starter-test</artifactId>
       <scope>test</scope>
       <exclusions>
-        <!-- Excluir JUnit 4 incluido automáticamente -->
         <exclusion>
           <groupId>junit</groupId>
           <artifactId>junit</artifactId>
@@ -48,19 +47,8 @@
     <!-- JUnit 5 para pruebas unitarias -->
     <dependency>
       <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter-api</artifactId>
+      <artifactId>junit-jupiter</artifactId>
       <version>5.10.0</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter-engine</artifactId>
-      <version>5.10.0</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
       <scope>test</scope>
     </dependency>
   </dependencies>
@@ -77,9 +65,6 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.0.0</version>
-        <configuration>
-          <junitPlatformVersion>1.7.2</junitPlatformVersion>
-        </configuration>
       </plugin>
 
       <plugin>
