--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,13 @@
       <version>5.10.0</version>
       <scope>test</scope>
     </dependency>
+
+    <!-- Dependencia para soporte de anotaciones javax.annotation-api -->
+    <dependency>
+      <groupId>javax.annotation</groupId>
+      <artifactId>javax.annotation-api</artifactId>
+      <version>1.3.2</version>
+    </dependency>
   </dependencies>
 
   <build>
@@ -65,6 +72,13 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.0.0</version>
+        <dependencies>
+          <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.3.2</version>
+          </dependency>
+        </dependencies>
       </plugin>
 
       <plugin>
